--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,32 +5,50 @@ body {
     line-height: 1.5;
 }
 
-}
-
 h1 {
-
+    text-align: center;
+    text-size-adjust: 200%;
 }
 
 img{
     width: 20%;
 }
 
-#instructions {
+p {
+    padding-left: 10px;
+}
 
+.instructions {
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    background-color: aqua;
+    text-align: left;
+    margin-bottom: 20px;
 }
 
 #tallyBox {
-
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    margin-bottom: 20px;
 }
 
 #winsLoses {
-
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    margin-bottom: 20px;
 }
 
 #gemImages {
-
+    align-content: center;
+    display: block;
 }
 
 #totalScore {
-
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    margin-bottom: 20px;
 }
