--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ p {
     text-align: left;
 }
 
-#winsLoses {
+#winsLosses {
     border-style: solid;
     border-width: 2px;
     border-color: black;
